--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -27,4 +27,13 @@
     <string name="settings">Settings</string>
     <string name="send_feedback">Send Feedback</string>
 
+    <!-- Preference Strings -->
+    <string name="about">About</string>
+    <string name="version_number">Version Number: %s</string>
+    <string name="open_source">View Source Code</string>
+    <string name="open_source_summary">Themers can also go here and add themselves to the \"Featured Themers\" section
+        to gain better visibility for their themes!</string>
+    <string name="changelog">Changelog</string>
+
+
 </resources>
