--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -35,5 +35,9 @@
         to gain better visibility for their themes!</string>
     <string name="changelog">Changelog</string>
 
+    <!-- Error strings -->
+    <string name="error_no_accounts">No Google Accounts</string>
+    <string name="error_no_accounts_summary">No accounts on device to log in to. We can\'t do anything.</string>
+    <string name="ok">OK</string>
 
 </resources>
