--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -44,5 +44,6 @@
     <string name="select_a_theme">Select an item!</string>
     <string name="download">Download</string>
     <string name="view_source">View Source Code</string>
+    <string name="installed">Installed</string>
 
 </resources>
