--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -45,5 +45,6 @@
     <string name="download">Download</string>
     <string name="view_source">View Source Code</string>
     <string name="installed">Installed</string>
+    <string name="loading">Loading&#8230;</string>
 
 </resources>
