--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -47,6 +47,7 @@
     <string name="view_source">View Source Code</string>
     <string name="installed">Installed, apply theme?</string>
     <string name="loading">Loading&#8230;</string>
+    <string name="theme_set">Theme Applied!</string>
 
     <!-- Search -->
     <string name="search">Search</string>
