some error checking on whether or not an app is actually a theme that can be applied

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -45,9 +45,11 @@
     <string name="select_a_theme">Select an item!</string>
     <string name="download">Download</string>
     <string name="view_source">View Source Code</string>
-    <string name="installed">Apply?</string>
+    <string name="apply">Apply?</string>
+    <string name="installed">Installed</string>
     <string name="loading">Loading&#8230;</string>
     <string name="theme_set">Theme Applied!</string>
+    <string name="not_a_theme">Not a theme!</string>
 
     <!-- Search -->
     <string name="search">Search</string>
